--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_FIREBASE_API_KEY=your_api_key
-VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
+VITE_FIREBASE_API_KEY=AIzaSyBvsdPIUAMxFC5EVkVUocwYvobZIjd-emc
+VITE_FIREBASE_AUTH_DOMAIN=findcitiesgame.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=findcitiesgame
+VITE_FIREBASE_STORAGE_BUCKET=findcitiesgame.firebasestorage.app
+VITE_FIREBASE_MESSAGING_SENDER_ID=433959047704
+VITE_FIREBASE_APP_ID=1:433959047704:web:dea1fc4397f09cbb63696d
